# simple-open-ai

./: .gitignore  Cargo.toml  README.md
src/: chat.rs  error.rs  lib.rs  main.rs  stt.rs  tts.rs
